# robotrs

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
build-utils/: Cargo.toml
build-utils/src/: artifact.rs  lib.rs  main.rs  zip.rs
cargo-deploy/: Cargo.toml
cargo-deploy/src/: lib.rs  main.rs  ssh.rs
crates/choreolib/: Cargo.toml
crates/navx/: Cargo.toml  README.md
crates/robotrs/: Cargo.toml  README.md
crates/utils/: Cargo.toml  README.md
ctre/: CTRE_LICENSE.txt  Cargo.toml  a.out  all.html  build.rs  enum.DemandType.html  enum.IdleMode.html  enum.VictorSPXControlMode.html  index.html  sidebar-items.js  struct.VictorSPX.html
ctre/cpp-layer/: main.cpp
ctre/error/: enum.Error.html  fn.to_result.html  fn.to_result_with_value.html  index.html  sidebar-items.js
ctre/include/: main.hpp
ctre/src/: error.rs  lib.rs  main.rs
example/: Cargo.toml  README.md
example/src/: lib.rs  main.rs  subsystems.rs
hal-sys/: Cargo.toml  build.rs
hal-sys/src/: bindings.rs  lib.rs  main.rs
navx/: Cargo.toml  all.html  build.rs  constant.DELAY_OVERHEAD_SECONDS.html  enum.Error.html  index.html  sidebar-items.js  struct.BoardState.html  struct.Capabilities.html  struct.Config.html  struct.NavX.html  struct.State.html  struct.StateUpdate.html
navx/io/: fn.get_crc.html  index.html  sidebar-items.js  trait.IO.html
navx/protocol/: constant.AHRSPOS_TS_RAW_UPDATE_ACC_X_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_ACC_Y_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_ACC_Z_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_ALTITUDE_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_CAL_STATUS_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_DISP_X_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_DISP_Y_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_DISP_Z_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_FUSED_HEADING_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_GYRO_BIAS_UPDATED_BOOL_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_GYRO_X_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_GYRO_Y_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_GYRO_Z_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_HEADING_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_LAST_SAMPLE_DELTA_SEC_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_LINEAR_ACCEL_X_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_LINEAR_ACCEL_Y_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_LINEAR_ACCEL_Z_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_MESSAGE_CHECKSUM_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_MESSAGE_LENGTH.html  constant.AHRSPOS_TS_RAW_UPDATE_MESSAGE_TERMINATOR_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_MPU_TEMP_VAUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_OPSTATUS_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_PITCH_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_QUAT_W_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_QUAT_X_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_QUAT_Y_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_QUAT_Z_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_ROLL_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_SELFTEST_STATUS_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_SENSOR_STATUS_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_TIMESTAMP_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_VEL_X_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_VEL_Y_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_VEL_Z_VALUE_INDEX.html  constant.AHRSPOS_TS_RAW_UPDATE_YAW_VALUE_INDEX.html  constant.AHRSPOS_TS_UPDATE_ALTITUDE_VALUE_INDEX.html  constant.AHRSPOS_TS_UPDATE_CAL_STATUS_VALUE_INDEX.html  constant.AHRSPOS_TS_UPDATE_DISP_X_VALUE_INDEX.html  constant.AHRSPOS_TS_UPDATE_DISP_Y_VALUE_INDEX.html  (+334 more)
navx/registers/: constant.NAVX_REG_ACCEL_FSR_G.html  constant.NAVX_REG_ACC_X_H.html  constant.NAVX_REG_ACC_X_L.html  constant.NAVX_REG_ACC_Y_H.html  constant.NAVX_REG_ACC_Y_L.html  constant.NAVX_REG_ACC_Z_H.html  constant.NAVX_REG_ACC_Z_L.html  constant.NAVX_REG_ALTITUDE_D_H.html  constant.NAVX_REG_ALTITUDE_D_L.html  constant.NAVX_REG_ALTITUDE_I_H.html  constant.NAVX_REG_ALTITUDE_I_L.html  constant.NAVX_REG_CAL_STATUS.html  constant.NAVX_REG_CAPABILITY_FLAGS_H.html  constant.NAVX_REG_CAPABILITY_FLAGS_L.html  constant.NAVX_REG_DISP_X_D_H.html  constant.NAVX_REG_DISP_X_D_L.html  constant.NAVX_REG_DISP_X_I_H.html  constant.NAVX_REG_DISP_X_I_L.html  constant.NAVX_REG_DISP_Y_D_H.html  constant.NAVX_REG_DISP_Y_D_L.html  constant.NAVX_REG_DISP_Y_I_H.html  constant.NAVX_REG_DISP_Y_I_L.html  constant.NAVX_REG_DISP_Z_D_H.html  constant.NAVX_REG_DISP_Z_D_L.html  constant.NAVX_REG_DISP_Z_I_H.html  constant.NAVX_REG_DISP_Z_I_L.html  constant.NAVX_REG_FUSED_HEADING_H.html  constant.NAVX_REG_FUSED_HEADING_L.html  constant.NAVX_REG_FW_VER_MAJOR.html  constant.NAVX_REG_FW_VER_MINOR.html  constant.NAVX_REG_GYRO_FSR_DPS_H.html  constant.NAVX_REG_GYRO_FSR_DPS_L.html  constant.NAVX_REG_GYRO_X_H.html  (+79 more)
nt/: Cargo.toml  README.md  all.html  build.rs  index.html  macro.nt!.html  macro.nt.html  sidebar-items.js  struct.Instance.html  struct.Publisher.html  struct.Subscriber.html  struct.Topic.html
revlib/: Cargo.toml  all.html  build.rs  enum.ControlType.html  enum.IdleMode.html  enum.MotorType.html  enum.SoftLimitDirection.html  index.html  macro.handle_error!.html  macro.handle_error.html  sidebar-items.js  struct.Handle.html  struct.SparkMax.html  trait.FeedbackSensor.html
robotrs/: Cargo.toml  all.html  fn.yield_now.html  index.html  macro.define_axes!.html  macro.define_axes.html  macro.define_buttons!.html  macro.define_buttons.html  macro.define_povs!.html  macro.define_povs.html  macro.status_to_result!.html  macro.status_to_result.html  sidebar-items.js  static.PERIODIC_CHECKS.html  struct.ErrorFutureWrapper.html  struct.Yield.html  trait.Deadzone.html  trait.FailableDefault.html
template/: Cargo.toml  cargo-generate.toml
utils/: Cargo.toml  all.html  fn.wait_for_disabled.html  fn.wait_for_enabled.html  index.html  macro.periodic!.html  macro.periodic.html  macro.wait.html  sidebar-items.js
(+16757 files in other folders)
