[workspace]

resolver = "2"
members = [
  "crates/hal-sys",
  "crates/robotrs",
  "crates/revlib",
  "example",
  "crates/ctre",
  "build-system/build-utils",
  "crates/nt",
  "build-system/cargo-deploy",
  "crates/hal",
  "crates/utils",
  "crates/navx",
  "crates/math",
  "build-system/bindings",
  "crates/macros",
  "crates/choreolib",
  "crates/choreolib/choreo-macros",
]
