[package]
name = "cargo-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
surge-ping = "0.8.0"
tokio = { version = "1.33.0", features = ["full"] }
