[package]
name = "cargo-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
clap = { version = "4.4.7", features = ["derive"] }
russh = "0.43.0"
russh-keys = "0.43.0"
russh-sftp = "2.0.0-beta.4"
surge-ping = "0.8.0"
tokio = { version = "1.33.0", features = ["full"] }
