[package]
name = "ctre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
anyhow = "1.0.75"
bindgen = "0.66.1"
bytes = "1.4.0"
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["full"] }
zip = "0.6.6"
