[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
navx = { path = "../navx" }
robotrs = { path = "../robotrs" }
revlib = { path = "../revlib" }
ctre = { path = "../ctre" }
futures = "0.3.28"
anyhow = "1.0.75"
