[package]
name = "nt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.0.0"
rmp = "0.8.12"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tungstenite = "0.21.0"
