[package]
name = "nt-rs"
version = "0.0.1"
edition = "2021"

license = "MIT"
description = "An NT 4.0 (and parially 4.1) client"
homepage = "https://github.com/BlueZeeKing/robotrs"
repository = "https://github.com/BlueZeeKing/robotrs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11.0"
futures = "0.3.30"
http = "1.0.0"
rmp = "0.8.12"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.53"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
