[package]
name = "revlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotrs = { path = "../robotrs" }
thiserror = "1.0.47"
tracing = "0.1.37"

[build-dependencies]
anyhow = "1.0.75"
bindgen = "0.66.1"
bytes = "1.4.0"
reqwest = "0.11.20"
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["full"] }
zip = "0.6.6"
