[package]
name = "robotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hal-sys = { path = "../hal-sys" }
units = { path = "../units" }
nt = { path = "../nt" }
linkme = "0.3.15"
thiserror = "1.0.47"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"
impl-trait-for-tuples = "0.2.2"
async-trait = "0.1.73"
pin-project = "1.1.3"
