[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.32.0", features = ["full"] }
zip = "0.6.6"
