[package]
name = "robotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hal-sys = { path = "../hal-sys" }
math = { path = "../math", features = ["frc"] }
linkme = "0.3.15"
thiserror = "1.0.47"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
anyhow = "1.0.75"
impl-trait-for-tuples = "0.2.2"
async-trait = "0.1.73"
pin-project = "1.1.3"
parking_lot = "0.12.1"
async-lock = "3.0.0"
async-task = "4.7.0"
flume = "0.11.0"
