[package]
name = "utils"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-deadman = "1.0.0"
async-lock = "3.3.0"
defer-lite = "1.0.0"
event-listener = "5.2.0"
flume = "0.11.0"
futures = "0.3.30"
oneshot = "0.1.6"
parking_lot = "0.12.1"
pin-project = "1.1.5"
robotrs = { version = "0.1.0", path = "../robotrs" }
tracing = "0.1.40"
